Adjust processor skeleton to actually work with package versions etc.

--- a/processor/.vscode/tasks.json
+++ b/processor/.vscode/tasks.json
@@ -3,7 +3,7 @@
 	"tasks": [
 		{
 			"type": "java",
-			"mainClass": "com.bigdataclass.App",
+			"mainClass": "uni.processor.DataStreamJob",
 			"targetPath": "${workspaceFolder}/${workspaceFolderBasename}.jar",
 			"elements": [
 				"${compileOutput}",
