--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -69,6 +69,12 @@ under the License.
 
 		<!-- Add connector dependencies here. They must be in the default scope (compile). -->
 
+		<dependency>
+			<groupId>com.redislabs</groupId>
+			<artifactId>jredistimeseries</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.flink</groupId>
@@ -203,4 +209,36 @@ under the License.
 			</plugins>
 		</pluginManagement>
 	</build>
+
+
+	<dependencyManagement>
+		<dependencies>
+
+			<dependency>
+				<groupId>com.esotericsoftware.kryo</groupId>
+				<artifactId>kryo</artifactId>
+				<version>2.21</version>
+			</dependency>
+
+
+			<dependency>
+				<groupId>org.xerial.snappy</groupId>
+				<artifactId>snappy-java</artifactId>
+				<version>1.1.8.1</version>
+			</dependency>
+
+
+			<dependency>
+				<groupId>org.lz4</groupId>
+				<artifactId>lz4-java</artifactId>
+				<version>1.7.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.7.30</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
