Add working version of Flink-Redis communication, (on top of all the previous layers ofcourse)

--- a/docker/full-app.yml
+++ b/docker/full-app.yml
@@ -51,3 +51,11 @@ services:
         jobmanager.rpc.address: jobmanager
         taskmanager.numberOfTaskSlots: 2        
 
+############################################################
+############################################################
+
+  redis:
+    image: redislabs/redistimeseries:1.6.7
+    container_name: redis
+    ports:
+      - "6379:6379"
