--- a/docker/full-app.yml
+++ b/docker/full-app.yml
@@ -59,3 +59,21 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+#############################################################
+#############################################################
+
+  grafana_redis_source:
+    build: ./redis_source/
+    environment: 
+      - "REDIS_HOST=redis"
+    depends_on:
+      - redis
+  grafana:
+    build: ./grafana/
+    ports:
+      - "3000:3000"
+    depends_on:
+      - grafana_redis_source
+
+
+
