--- a/docker/full-app.yml
+++ b/docker/full-app.yml
@@ -74,3 +74,5 @@ services:
       - GF_AUTH_BASIC_ENABLED=false
       - GF_ENABLE_GZIP=true
       - GF_INSTALL_PLUGINS=redis-datasource
+    volumes:
+      ./provisioning/datasources:/etc/grafana/provisioning/datasources
