--- a/docker/full-app.yml
+++ b/docker/full-app.yml
@@ -25,6 +25,17 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+  
+  init-kafka:
+    image: confluentinc/cp-kafka:6.2.0
+    container_name: init-kafka
+    depends_on:
+      - broker
+    entrypoint: ['/bin/sh', '-c']
+    command: 
+    - |
+      kafka-topics --bootstrap-server broker:29092 --list
+      kafka-topics --bootstrap-server broker:29092 --create --topic sensors
 
 ############################################################
 ############################################################
@@ -34,10 +45,14 @@ services:
     ports:
       - "8081:8081"
     command: jobmanager
+    depends_on:
+      - init-kafka
     environment:
       - |
         FLINK_PROPERTIES=
-        jobmanager.rpc.address: jobmanager        
+        jobmanager.rpc.address: jobmanager 
+    volumes:
+      - ./processor:/processor    
 
   taskmanager:
     image: flink:latest
@@ -62,18 +77,10 @@ services:
 #############################################################
 #############################################################
 
-  grafana_redis_source:
-    build: ./redis_source/
-    environment: 
-      - "REDIS_HOST=redis"
-    depends_on:
-      - redis
-
-#############################################################
-#############################################################
 
   grafana:
-    build: ./grafana/
+    container_name: grafana
+    image: grafana/grafana:latest
     ports:
       - "3000:3000"
     environment:
@@ -83,4 +90,4 @@ services:
       - GF_ENABLE_GZIP=true
       - GF_INSTALL_PLUGINS=redis-datasource
     volumes:
-      ./provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ./provisioning/datasources:/etc/grafana/provisioning/datasources
