--- a/docker/full-app.yml
+++ b/docker/full-app.yml
@@ -79,7 +79,7 @@ services:
 
 
   grafana:
-    container_name: grafana_latest
+    container_name: grafana
     image: grafana/grafana:latest
     ports:
       - "3000:3000"
@@ -89,5 +89,7 @@ services:
       - GF_AUTH_BASIC_ENABLED=false
       - GF_ENABLE_GZIP=true
       - GF_INSTALL_PLUGINS=redis-datasource
+      - GF_PATHS_CONFIG=/customIniFolder/grafana.ini
     volumes:
       - ./provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ./grafana:/customIniFolder
